--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 meta-digi
 =========
 
-This is the location for Digi maintained BSPs.
+This is the location for Digi maintained layers.
 
-Please see the README files contained in the individual BSP layers for
-BSP-specific information.
+Please see the README files contained in the individual layers for
+specific information.
