--- a/meta-digi-arm/README
+++ b/meta-digi-arm/README
@@ -4,9 +4,12 @@ OpenEmbedded/Yocto BSP layer for Digi's ConnectCore platforms
 This layer provides support for Digi's ConnnecCore platforms for use
 with OpenEmbedded and/or Yocto.
 
-This layer is based on meta-fsl-arm available at.
+This layer is based on the following Yocto layers (Danny):
 
-http://git.yoctoproject.org/cgit/cgit.cgi/meta-fsl-arm/
+git://git.yoctoproject.org/poky 		 27af23e65f63b41962a7cfddba9e9372d5212396
+git://git.yoctoproject.org/meta-fsl-arm          869452daf4fe085d5013905f6a5a6584a0e3a56e
+git://github.com/openembedded/meta-oe.git        c02834a7cc5fda525c7ebeec545625233bab4cb5
+
 
 Digi's license agreements
 -------------------------
