--- a/meta-digi-del/README
+++ b/meta-digi-del/README
@@ -5,9 +5,9 @@ This layer provides the Digi Embedded Linux distribution images.
 
 This layer is based on the following Yocto layers (Danny):
 
-git://git.yoctoproject.org/poky 		 e89f812a0af56beda951c1dce6113a61d6db8cda
-git://github.com/openembedded/meta-oe.git        c02834a7cc5fda525c7ebeec545625233bab4cb5
-git://github.com/Freescale/meta-fsl-demos.git    6dd73bd7f5581fff273d17032f5625efa901b6d7
+git://git.yoctoproject.org/poky 		 2806646a263527ec0487ea160afd4bdc0a3c1703
+git://git.yoctoproject.org/meta-fsl-arm          a0e486a76af5819ee76ac34e966feb72bd3c48bd
+git://github.com/openembedded/meta-oe.git        34e5537e67b655b8d2effbbecc207d88eea52b87
 
 Digi's license agreements
 -------------------------
