--- a/meta-digi-arm/README
+++ b/meta-digi-arm/README
@@ -6,9 +6,9 @@ with OpenEmbedded and/or Yocto.
 
 This layer is based on the following Yocto layers (Danny):
 
-git://git.yoctoproject.org/poky 		 2806646a263527ec0487ea160afd4bdc0a3c1703
-git://git.yoctoproject.org/meta-fsl-arm          a0e486a76af5819ee76ac34e966feb72bd3c48bd
-git://github.com/openembedded/meta-oe.git        34e5537e67b655b8d2effbbecc207d88eea52b87
+git://git.yoctoproject.org/poky
+git://git.yoctoproject.org/meta-fsl-arm
+git://github.com/openembedded/meta-oe.git
 
 
 Digi's license agreements
