meta-digi: update README files
Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/README
+++ b/meta-digi-arm/README
@@ -4,12 +4,11 @@ OpenEmbedded/Yocto BSP layer for Digi's ConnectCore platforms
 This layer provides support for Digi's ConnnecCore platforms for use
 with OpenEmbedded and/or Yocto.
 
-This layer is based on the following Yocto layers (Danny):
+This layer depends on:
 
-git://git.yoctoproject.org/poky
-git://git.yoctoproject.org/meta-fsl-arm
-git://github.com/openembedded/meta-oe.git
-
+git://git.yoctoproject.org/poky.git
+git://git.openembedded.org/meta-openembedded.git
+git://git.yoctoproject.org/meta-fsl-arm.git
 
 Digi's license agreements
 -------------------------
@@ -30,4 +29,3 @@ Support
 
 This layer is provided 'as is' with no guarantee. However, some support
 may be available from support@digi.com
-
