morty migration: meta-digi: update FSL layer name
meta-fsl-arm is no longer used for Morty release. Now the community
support is implemented in 'meta-freescale' layer.

https://jira.digi.com/browse/DEL-3451

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/README
+++ b/meta-digi-arm/README
@@ -8,7 +8,7 @@ This layer depends on:
 
 git://git.yoctoproject.org/poky.git
 git://git.openembedded.org/meta-openembedded.git
-git://git.yoctoproject.org/meta-fsl-arm.git
+git://git.yoctoproject.org/meta-freescale.git
 
 Digi's license agreements
 -------------------------
