meta-digi: update support email address
Signed-off-by: Jose Diaz de Grenu <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-arm/README
+++ b/meta-digi-arm/README
@@ -29,4 +29,4 @@ Support
 -------
 
 This layer is provided 'as is' with no guarantee. However, some support
-may be available from support@digi.com
+may be available from tech.support@digi.com
