--- a/meta-digi-dey/README
+++ b/meta-digi-dey/README
@@ -29,4 +29,4 @@ Support
 -------
 
 This layer is provided 'as is' with no guarantee. However, some support
-may be available from support@digi.com
+may be available from tech.support@digi.com
